<resources>
    <string name="app_name">Android4A</string>
    <string name="messageBienvenue">Hello World! Pushed on GitHub</string>
    <string name="message2">Landscape :D</string>
    <string name="button">OK</string>
    <string name="button2">DATE</string>
    <string name="datehere">Here is set the date</string>
    <string name="notifButton">NOTIF</string>
    <string name="openNewActivityButton">Open</string>
    <string name="beerButton">Beer</string>
    <string name="title_activity_recette">RecetteActivity</string>
</resources>
