<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"

    tools:context="fr.esiea.android.projet.mobile.MainActivity"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/welcomeMsg"
        android:layout_height="wrap_content"
        android:text="@string/messageBienvenue"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <TextView
        android:text="@string/datehere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:text="@string/openNewActivityButton"
        android:onClick="openNewActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true" />

    <Button
        android:text="@string/beerButton"
        android:onClick="openBeerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true" />

</RelativeLayout>
